# pkg_geometry

./: LICENSE  README.md  api_reference.md  index.html  mkdocs.yml
docs/: index.md  userguide.md
pkg_geometry/: README.rst  pyproject.toml
pkg_geometry/pkg_geometry/: __init__.py  geometry.py
pkg_geometry/tests/: test_pkg_geometry.py
site/: 404.html  search.html  sitemap.xml
site/api_reference/: index.html
site/search/: search_index.json
site/userguide/: index.html
